[package]
name = "rs_centreon"
version = "24.4.0"
edition = "2021"
authors = ["David Boucher <dboucher@centreon.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
threadpool = "1.8.1"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
